@@ -3,6 +3,8 @@ Changes made from the "0.7.0" release to the "0.8.0" release:
 
 * Bertrand Coconnier:
 
+- Fixed a bug which caused some memory leaks when memory allocation failed
+  during the update of the masters.
 - Updated the demo in the examples: extrusion and ligthing have been added.
 - Now uses SQLite3 to manage Unicode names and code points.
 - Optimized calls to glNormal3f(). It is now called once per string rather than
